--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1-timer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/1-timer.css" />
   </head>
   <body>
     <main>
+      <a class="back" href="./index.html">back</a>
       <div class="container">
-        <input type="text" id="datetime-picker" />
-        <button type="button" data-start disabled>Start</button>
+        <input class="date-input" type="text" id="datetime-picker" />
+        <button class="button-input" type="button" data-start disabled>
+          Start
+        </button>
 
         <div class="timer">
           <div class="field">
